--- a/document/literature.bib
+++ b/document/literature.bib
@@ -287,12 +287,20 @@
   urldate = {2025-01-28}
 }
 
-@online{kubernetes.secret_types,
+@online{kubernetes.io_secret_types,
   author  = {The Kubernetes Authors},
   title   = {Kubernetes - Secrets},
   year    = 2024,
   url     = {https://kubernetes.io/docs/concepts/configuration/secret/#secret-types},
   urldate = {2025-01-30}
+}
+
+@online{kubernetes.io_start,
+  author  = {The Kubernetes Authors},
+  title   = {Kubernetes},
+  year    = 2024,
+  url     = {https://kubernetes.io},
+  urldate = {2025-02-03}
 }
 
 @misc{rfc4648,
@@ -309,6 +317,120 @@
   month        = oct,
   abstract     = {This document describes the commonly used base 64, base 32, and base 16 encoding schemes. It also discusses the use of line-feeds in encoded data, use of padding in encoded data, use of non-alphabet characters in encoded data, use of different encoding alphabets, and canonical encodings. {[}STANDARDS-TRACK{]}}
 }
+
+@inproceedings{8406008,
+  author    = {Campeanu, Gabriel},
+  booktitle = {2018 7th Mediterranean Conference on Embedded Computing (MECO)},
+  title     = {A mapping study on microservice architectures of Internet of Things and cloud computing solutions},
+  year      = {2018},
+  volume    = {},
+  number    = {},
+  pages     = {1-4},
+  keywords  = {Cloud computing;Internet of Things;Computer architecture;Embedded computing;Market research;Systematics;Libraries;Internet of Things;microservice;cloud computing;IoT;SLR;systematic mapping study},
+  doi       = {10.1109/MECO.2018.8406008}
+}
+
+@article{7158965,
+  author   = {Pahl, Claus},
+  journal  = {IEEE Cloud Computing},
+  title    = {Containerization and the PaaS Cloud},
+  year     = {2015},
+  volume   = {2},
+  number   = {3},
+  pages    = {24-31},
+  keywords = {Containerization;Virtualization;File systems;Linux;Computer architecture;Packaging;cloud;cloud computing;cluster;container;Docker;Kubernetes;multicloud;PaaS;virtualization},
+  doi      = {10.1109/MCC.2015.51}
+}
+
+@article{10.1145/1272998.1273025,
+  author     = {Soltesz, Stephen and P\"{o}tzl, Herbert and Fiuczynski, Marc E. and Bavier, Andy and Peterson, Larry},
+  title      = {Container-based operating system virtualization: a scalable, high-performance alternative to hypervisors},
+  year       = {2007},
+  issue_date = {June 2007},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {41},
+  number     = {3},
+  issn       = {0163-5980},
+  url        = {https://doi.org/10.1145/1272998.1273025},
+  doi        = {10.1145/1272998.1273025},
+  abstract   = {Hypervisors, popularized by Xen and VMware, are quickly becoming commodity. They are appropriate for many usage scenarios, but there are scenarios that require system virtualization with high degrees of both isolation and efficiency. Examples include HPC clusters, the Grid, hosting centers, and PlanetLab. We present an alternative to hypervisors that is better suited to such scenarios. The approach is a synthesis of prior work on resource containers and security containers applied to general-purpose, time-shared operating systems. Examples of such container-based systems include Solaris 10, Virtuozzo for Linux, and Linux-VServer. As a representative instance of container-based systems, this paper describes the design and implementation of Linux-VServer. In addition, it contrasts the architecture of Linux-VServer with current generations of Xen, and shows how Linux-VServer provides comparable support for isolation and superior system efficiency.},
+  journal    = {SIGOPS Oper. Syst. Rev.},
+  month      = mar,
+  pages      = {275–287},
+  numpages   = {13},
+  keywords   = {Linux-VServer, Xen, alternative, container, hypervisor, operating, system, virtualization}
+}
+
+@online{microservices,
+  author  = {Lewis, James AND Fowler, Martin},
+  title   = {Microservices a definition of this new architectural term},
+  year    = 2014,
+  url     = {https://martinfowler.com/articles/microservices.html},
+  urldate = {2025-02-03}
+}
+
+@book{domingus2022cloud,
+  title     = {Cloud Native DevOps with Kubernetes: Building, Deploying, and Scaling Modern Applications in the Cloud},
+  author    = {Domingus, J. and Arundel, J.},
+  isbn      = {978-1-098-11683-5},
+  year      = {2022},
+  publisher = {O'Reilly Media}
+}
+
+@online{story_zalando,
+  author  = {The Kubernetes Authors},
+  title   = {Europe's Leading Online Fashion Platform Gets Radical with Cloud Native},
+  year    = 2025,
+  url     = {https://kubernetes.io/case-studies/zalando/},
+  urldate = {2025-02-02}
+}
+
+@online{story_spotify,
+  author  = {The Kubernetes Authors},
+  title   = {Spotify: An Early Adopter of Containers, Spotify Is Migrating from Homegrown Orchestration to Kubernetes},
+  year    = 2025,
+  url     = {https://kubernetes.io/case-studies/spotify/},
+  urldate = {2025-02-02}
+}
+
+@online{story_openai,
+  author  = {The Kubernetes Authors},
+  title   = {Launching and Scaling Up Experiments, Made Simple},
+  year    = 2025,
+  url     = {https://kubernetes.io/case-studies/openai/},
+  urldate = {2025-02-02}
+}
+
+@online{openai_scaling_2500,
+  author  = {Berner, Christopher},
+  title   = {Scaling Kubernetes to 2,500 nodes},
+  year    = 2018,
+  url     = {https://openai.com/index/scaling-kubernetes-to-2500-nodes/},
+  urldate = {2025-02-04}
+}
+
+@online{openai_scaling_7500,
+  author  = {Sigler, Eric AND Chess, Benjamin},
+  title   = {Scaling Kubernetes to 7,500 nodes},
+  year    = 2018,
+  url     = {https://openai.com/index/scaling-kubernetes-to-7500-nodes/},
+  urldate = {2025-02-04}
+}
+
+
+@online{php,
+  author  = {The PHP Group},
+  title   = {PHP - A popular general-purpose scripting language that is especially suited to web development},
+  year    = 2025,
+  url     = {https://www.php.net/},
+  urldate = {2025-02-04}
+}
+
+
+
+
+
 
 
 
