--- a/document/literature.bib
+++ b/document/literature.bib
@@ -372,10 +372,18 @@
 
 @book{domingus2022cloud,
   title     = {Cloud Native DevOps with Kubernetes: Building, Deploying, and Scaling Modern Applications in the Cloud},
-  author    = {Domingus, J. and Arundel, J.},
+  author    = {Domingus, Justin and Arundel, John},
   isbn      = {978-1-098-11683-5},
   year      = {2022},
   publisher = {O'Reilly Media}
+}
+
+@book{cicd_with_kubernetes,
+  title     = { CI/CD with Kubernetes },
+  author    = {Williams, Alex},
+  year      = {2018},
+  url       = {https://www.cncf.io/free-ebook-ci-cd-with-kubernetes/},
+  publisher = {The New Stack}
 }
 
 @online{story_zalando,
@@ -425,6 +433,22 @@
   year    = 2025,
   url     = {https://www.php.net/},
   urldate = {2025-02-04}
+}
+
+@online{fowler_Continuous_Integration,
+  author  = {Fowler, Martin},
+  title   = {Continuous Integration},
+  year    = 2024,
+  url     = {https://martinfowler.com/articles/continuousIntegration.html},
+  urldate = {2025-02-06}
+}
+
+@book{chacon2014pro,
+  title     = {Pro git},
+  author    = {Chacon, Scott and Straub, Ben},
+  year      = {2014},
+  publisher = {Apress},
+  url       = {https://git-scm.com/book/en/v2}
 }
 
 
